# vimbrowser

./: .gitignore  CMakeLists.txt  Makefile  README.md
backend/: .gclient  .gitignore
backend/chromium/: .gn  BUILD.gn  DEPS
backend/chromium/base/: command_line.cc  logging.cc  logging.h
backend/chromium/base/message_loop/: message_pump_apple.mm  message_pump_win.cc
backend/chromium/base/process/: set_process_title.cc
backend/chromium/base/task/: current_thread.cc  current_thread.h
backend/chromium/base/test/: BUILD.gn  test_trace_processor_export.h
backend/chromium/cef/: .gitignore  README.md  VERSION.stamp  cef_api_untracked.json
backend/chromium/chrome/: chrome_paks.gni  chrome_repack_locales.gni
backend/chromium/components/: version_ui_strings.grdp
backend/chromium/ipc/: ipc_mojo_bootstrap.cc
backend/chromium/printing/: printing_context.h  printing_context_linux.cc
backend/chromium/v8/: BUILD.gn
docs/: benchmarks.md  design.md  focus-experiment.md  ipc.md  website-mode-keybinds.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
patches/chromium/: element-shader.patch
scripts/: bootstrap-cef.sh  bootstrap-chromium-source.sh  build-chromium-cef.sh  slim-cef-runtime.sh  sync-chromium-cef-distrib.sh  vimbrowser-benchmark  vimbrowser-ipc
src/: app.cc  app.h  browser_client.cc  browser_client.h  browser_window.cc  browser_window.h  config.cc  config.h  element_shader_js.h  ipc_server.cc  ipc_server.h  main.cc  shortcuts.c  shortcuts.h  tab.h  theme.h  vim.cc  vim.h
(+5643 files in other folders)
